--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -1,6 +1,6 @@
 sonar.projectKey=Francesco-rosati_Software-Engineering-project
 sonar.organization=francesco-rosati
-sonar.javascript.lcov.reportPaths=./coverage/lcov.info
+sonar.javascript.lcov.reportPaths=.code/server/unitTestResult.txt
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=Software-Engineering-project
